<resources>
    <string name="app_name">DRIVEHOUSE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_cliente">Clientes</string>
    <string name="title_activity_cliente">Clientes</string>

    <string name="search">Buscar</string>
    <string name="title_activity_detail">View</string>

    <string name="title_activity_insert">Nuevo Cliente</string>
    <string name="title_activity_update">Actualizar Cliente</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_docuemnto">Documento</string>
    <string name="label_telefono">Teléfono</string>
    <string name="label_celular">Celular</string>
    <string name="label_email">E-mail</string>
    <string name="label_usuario_creacion">Creador</string>
    <string name="label_fecha_creacion">Fecha Creación</string>
    <string name="label_email_1">E-mail Principal</string>
    <string name="label_emai_2">E-mail Secundario</string>
    <string name="action_eliminar">Eliminar</string>
    <string name="action_descartar">Descartar</string>
    <string name="label_error_de_coneccionn">Error de Conexión</string>
</resources>
