<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.administrador.drivehouse.ui.fragmentos.InsertFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.administrador.drivehouse.ui.fragmentos.InsertFragment">

            <!-- Card Contacto -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:elevation="@dimen/cardview_default_elevation"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/cardView_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray_light"
                        android:paddingBottom="16dp"
                        android:text="Perfil"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/primary" />
                    <!--Capo para nombre-->
                    <EditText
                        android:id="@+id/input_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:hint="@string/label_nombre"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="false"
                        android:singleLine="true" />
                    <!--Campo para el apellido-->
                    <EditText
                        android:id="@+id/input_apellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:hint="@string/label_apellido"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="false"
                        android:singleLine="true" />
                    <!--Campo para el Documento-->
                    <EditText
                        android:id="@+id/input_documento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/label_docuemnto"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="false"
                        android:singleLine="true" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="@dimen/cardview_default_elevation"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/cardView_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray_light"
                        android:paddingBottom="16dp"
                        android:text="Contacto"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/primary" />
                    <!--Campo para el Telefono-->
                    <EditText
                        android:id="@+id/input_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:hint="@string/label_telefono"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="true"
                        android:singleLine="true" />

                    <!--Campo para el Celular-->
                    <EditText
                        android:id="@+id/input_celular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:hint="@string/label_celular"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="true"
                        android:singleLine="true" />
                    <!--Campo para el Email Principal-->
                    <EditText
                        android:id="@+id/input_email_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:hint="@string/label_email_1"
                        android:inputType="textEmailAddress"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="false"
                        android:singleLine="true" />
                    <!--Campo para el Email Principal-->
                    <EditText
                        android:id="@+id/input_email_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/label_emai_2"
                        android:inputType="textEmailAddress"
                        android:maxLength="55"
                        android:maxLines="1"
                        android:minLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:phoneNumber="false"
                        android:singleLine="true" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>